# poc_threshold_signing_rust

./: .gitignore  FINAL_RESULTS.md  README.md  SETUP_GUIDE.md  SOLIDITY_DEPLOYMENT_GUIDE.md  TEST_RESULTS.md  TROUBLESHOOTING.md  VERIFYING_PARTIAL_SHARE.md
.claude/commands/: 001_create_plan.md  002_plan.md
rust_threshold_signing/: .gitignore  Cargo.toml
rust_threshold_signing/host/: Cargo.toml
rust_threshold_signing/host/src/: main.rs
rust_threshold_signing/lib/: Cargo.toml
rust_threshold_signing/lib/src/: lib.rs  serialization.rs  threshold.rs
rust_threshold_signing/program/: Cargo.toml
rust_threshold_signing/program/src/: main.rs
rust_threshold_signing/scripts/: build.sh  run.sh  test.sh
scripts/: clean.sh  e2e.sh  setup.sh
solidity_threshold_signing/: .env.example  .gitignore  foundry.toml
solidity_threshold_signing/contracts/: ThresholdVerifier.sol
solidity_threshold_signing/script/: Deploy.s.sol
solidity_threshold_signing/scripts/: build.sh  deploy.sh  test.sh
solidity_threshold_signing/test/: ThresholdVerifier.t.sol
