[workspace]
members = ["host", "program", "lib"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[patch.crates-io]
# Use SP1-optimized curve25519-dalek with precompile support
# This should accelerate ed25519 signature verification in zkVM
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "patch-v4.1.3-v3.4.0" }
