[package]
name = "threshold-signing-host"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-sdk = "3.0.0"
threshold-signing-lib = { path = "../lib" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
frost-ed25519 = "2.0.0"
rand = "0.8"
bincode = "1.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
