[package]
name = "threshold-signing-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
frost-ed25519 = "2.0.0"
ed25519-dalek = { version = "2.1", default-features = false, features = ["serde"] }
curve25519-dalek = { version = "4.1", default-features = false }
serde = { workspace = true }
bincode = { workspace = true }
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
